--- a/index.html
+++ b/index.html
@@ -33,47 +33,57 @@
 
         <div id="noticias">
             <div class="noticiaDestaque">
-                <img class="imgNoticia" src="Imagens/monitor-cov.jpg" /></br>
-                <h3>1 - Pesquisadores do IFCE desenvolvem plataforma de acompanhamento da situação do coronavírus no
-                    Ceará e Mundo </h3>
-                <p class="noticiaTexto"> Com gráficos, análises e projeções é possível comparar e prever como cada local
+                <img class="imgNoticia" src="Imagens/noticia1.jpg" /></br>
+
+                <p class="noticiaTexto">
+                    <strong>1- Pesquisadores do IFCE desenvolvem plataforma de acompanhamento da situação do coronavírus
+                        no
+                        Ceará e Mundo.</strong> </br>
+                    </br>
+                    Com gráficos, análises e projeções é possível comparar e prever como cada local
                     do Estado pode
                     reagir ao vírus </p>
+
             </div>
 
             <div class="noticiaDestaque">
                 <img class="imgNoticia" src="Imagens/noticia2.jpg" /> </br>
-                <h3>2 - Potential new treatment for COVID-19 uncovered by BenevolentAI enters trials </h3></br>
-                <p class="noticiaTexto"> BenevolentAI, a startup which has raised $292 million to apply AI to create drugs faster,
-                     today says it has uncovered an already approved drug as a potential treatment for COVID-19 </p>
+                <p class="noticiaTexto"> <strong> 2- Potential new treatment for COVID-19 uncovered by BenevolentAI
+                        enters trials </strong></br></br>
+                    BenevolentAI, a startup which has raised $292 million to apply AI to create
+                    drugs faster,today says it has uncovered an already approved drug as a potential treatment for
+                    COVID-19 </p>
             </div>
 
             <div class="noticiaDestaque">
                 <img class="imgNoticia" src="Imagens/noticia3.jpg" /> </br>
-                <h3>3 - In Loco cria mapa com índice de isolamento social no Brasil a partir de localização de celulares </h3>
-                <p class="noticiaTexto"> A empresa recifense In Loco disponibilizou em seu site um mapa do Brasil com índices de isolamento social baseados na localização de celulares. </p>
+                <p class="noticiaTexto"> <strong>3 - In Loco cria mapa com índice de isolamento social no Brasil a partir de localização de celulares
+                </strong></br></br>
+                A empresa recifense In Loco disponibilizou em seu site um mapa do Brasil com
+                    índices de isolamento social baseados na localização de celulares. </p>
             </div>
 
             <div class="noticiaDestaque">
                 <img class="imgNoticia" src="Imagens/noticia4.jpg" /> </br>
-                <h3>4 - Nubank vai pagar compras de iFood e consultas para clientes </h3>
-                <p class="noticiaTexto"> Fintech cria fundo de 20 milhões de reais e firma parcerias para ajudar clientes em meio à crise do coronavírus </p>
+                <p class="noticiaTexto"> <strong>4 - Nubank vai pagar compras de iFood e consultas para clientes
+                </strong></br></br>
+                Fintech cria fundo de 20 milhões de reais e firma parcerias para ajudar clientes em meio à crise do coronavírus. </p>
+            </div>
+            
+
+            <div class="noticiaDestaque">
+                <img class="imgNoticia" src="Imagens/noticia5.jpg" /> </br>
+                <p class="noticiaTexto"> <strong>
+                    5 - De apartamento 3D a luvas nas obras, as ações da Loft contra o coronavírus 
+                </strong></br></br>
+                Além da startup, outras empresas do setor imobiliário vêm implementando adaptações. Segmento é um dos que mais podem ser impactados pela pandemia </p>
             </div>
 
             <div class="noticiaDestaque">
-                <img class="imgNoticia" src="Imagens/noticia5.JPG" /> </br>
-                <h3>5 - De apartamento 3D a luvas nas obras, as ações da Loft contra o coronavírus </h3>
-                <p class="noticiaTexto"> Além da startup, outras empresas do setor imobiliário vêm implementando adaptações.
-                     Segmento é um dos que mais podem ser impactados pela pandemia </p>
-            </div>
-
-            <div class="noticiaDestaque">
-                <img class="imgNoticia" src="Imagens/monitor-cov.jpg" /> </br>
-                <h3>6 - Pesquisadores do IFCE desenvolvem plataforma de acompanhamento da situação do coronavírus no
-                    Ceará e Mundo </h3>
-                <p class="noticiaTexto"> Com gráficos, análises e projeções é possível comparar e prever como cada local
-                    do Estado pode
-                    reagir ao vírus </p>
+                <img class="imgNoticia" src="Imagens/noticia6.jpg" /> </br>
+                <p class="noticiaTexto"> <strong>6 - Startups do Brasil se mobilizam contra o coronavírus
+                </strong></br></br>
+                 </p>
             </div>
 
 
@@ -84,8 +94,8 @@
     <div id="rodape">
         <div id=redesSociais>
             <a href="https://github.com/a-cs"> <img src="Imagens/github.png" /> </a>
-            <a href="https://www.linkedin.com/in/acarneirosousa"> <img src="Imagens/linkedin.png"   /></a>
-            
+            <a href="https://www.linkedin.com/in/acarneirosousa"> <img src="Imagens/linkedin.png" /></a>
+
         </div>
     </div>
 
