corrigindo estilo navegador

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Flatten the Curve</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="estilo.css">
 </head>
 
