melhorando design header v2

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         </ul>
         <div id="logo">
             <img id="imLogo" src="Imagens/logo.jpg" />
+            <div class="mylogo_over">Flatten the Curve</div>
+            <div class="mylogo_over2">Acompanhando a luta contra o COVID-19</div>
         </div>
     </nav>
     
