melhorando design logo e background

--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
             
         </ul>
         <div id="logo">
+            <!--
             <img id="imLogo" src="Imagens/logo.jpg" />
             <div class="mylogo_over">Flatten the Curve</div>
             <div class="mylogo_over2">Acompanhando a luta contra o COVID-19</div>
+            -->
+            <div class="title">
+            <h1>Flatten the curve</h1>
+            <p> Acompanhando a luta contra o COVID-19</p>
+        </div>
         </div>
     </nav>
     
