--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li> <a href="index.html">Home</a> </li>
             <li> <a href="about.html">Sobre</a></li>
             <li> <a href="index.html">Contato</a></li>
+            <li> <a href="index.html">Saiba Mais</a></li>
             
         </ul>
         <div id="logo">
@@ -36,7 +37,7 @@
         <br />
 
         <div id="tituloDestaque">
-            <h2>Top 6 Notícias</h2>
+            <h2>Principais Notícias</h2>
         </div>
 
         <div id="noticias">
