--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <ul>
             <li> <a href="index.html">Home</a> </li>
             <li> <a href="about.html">Sobre</a></li>
-            <li> <a href="index.html">Contato</a></li>
+            <li> <a href="contact.html">Contato</a></li>
             <li> <a href="more.html">Saiba Mais</a></li>
 
         </ul>
